--- a/businessTransfers/src/app/home-slide/home-slide.component.css
+++ b/businessTransfers/src/app/home-slide/home-slide.component.css
@@ -10,6 +10,11 @@
   margin-left: 5%;
   height: 250px;
 }
+@media (max-width: 768px) {
+  #box1 {
+    height: 300px;
+  }
+}
 
 #box2 {
   position: relative;
